--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: black;
+  color: wheat;
+  height: 97vh;
 }
 
 .fragenKarte {
@@ -13,8 +16,9 @@
   /* Visual  */
   background-color: gray;
   padding: 16px;
+  border: darkred 3px solid;
   border-radius: 16px;
-  color: white;
+  color: wheat;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
@@ -27,7 +31,7 @@ li {
   margin-top: 8px;
   background-color: darkgray;
   padding: 16px;
-  border: 3px solid white;
+  border: 3px solid darkred;
   border-radius: 20px;
   font-size: 20px;
 }
