Versuch nr1 ein bisschen dunkler weißer balken oben nervt! font= Permanent Marker

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   background-color: black;
   color: wheat;
   height: 97vh;
+  font-family: 'Permanent Marker', cursive;
+  /*font-family: 'The Nautigal', cursive;*/
 }
 
 .fragenKarte {
