Versuch nr1 ein bisschen dunkler weißer balken oben nervt! font= Permanent Marker farben geändert bg img hinzugefügt und als cover gesetzt um wiederholung zu vermeiden

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   background-color: black;
   background-image: url("./bgimg.jpg");
+  background-size: cover;
   color: darkred;
   height: 97vh;
   font-family: 'Permanent Marker', cursive;
